--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "static-site",
+  "name": "homework9",
   "version": "1.0.0",
-  "description": "",
+  "description": "jsjsj ## Description sjsjs ## Table of Contents sjsjs ## Installation jsjsj ## Usage sjsjs ## License sjsjs ## Contributing sjsj ## Tests jsjs ## Questions sjsj",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jben817/Homework9.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jben817/Homework9/issues"
+  },
+  "homepage": "https://github.com/jben817/Homework9#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "dotenv": "^8.0.0",
-    "electron": "^5.0.3",
-    "electron-html-to": "^2.6.0",
-    "inquirer": "^6.5.2",
-    "open": "^6.3.0"
+    "inquirer": "^7.1.0"
   }
 }
